deployments/mariadb/mariadb-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
    tier: backend
  name: mariadb-svc
  namespace: mariadb-svc
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mariadb
    tier: backend
  type: ClusterIP
