deployments/mariadb/mariadb-deployment.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: mariadb
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mariadb
  name: mariadb
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
      tier: backend
  strategy: {}
  template:
    metadata:
      labels:
        app: mariadb
        tier: backend
    spec:
      automountServiceAccountToken: false  # Service Account Tokens are only mounted where necessary
      securityContext:
        runAsNonRoot: true  # Containers should run as a high UID to avoid host conflict
        runAsUser: 103306 # Using high UID to avoid conflicts
        readOnlyRootFilesystem: true  # Use read-only filesystem for containers where possible
        seccompProfile:
          type: docker/default  # Ensure that the seccomp profile is set to docker/default or runtime/default
      containers:
      - image: mariadb:10.6@sha256:placeholder_digest
        name: mariadb
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: true  # Running container as non-root
          runAsUser: 103306  # Using high UID to avoid conflicts
          readOnlyRootFilesystem: true  # Mounting read-only filesystem
          allowPrivilegeEscalation: false
          seccompProfile:
            type: docker/default  # Ensure that the seccomp profile is set to docker/default or runtime/default
          capabilities:
            drop:
              - ALL  # Dropping all capabilities
        resources:
          limits:
            cpu: "0.5"
            memory: "500Mi"
          requests:
            cpu: "0.1"
            memory: "100Mi"
        volumeMounts:
        - name: "mariadb-persistent-storage"
          mountPath: "/var/lib/mysql/"
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 30  # Delay before liveness probe is initiated
          periodSeconds: 10  # How often to perform the probe
          timeoutSeconds: 5  # When the probe times out
          successThreshold: 1  # Minimum consecutive successes for the probe to be considered successful
          failureThreshold: 3  # Minimum consecutive failures for the probe to be considered failed
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pvc
